# django-chat-app

./: Makefile  chatdb.sqlite3  pyproject.toml
chats/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chats/migrations/: 0001_initial.py
chats/templates/: all-users.html  index.html  room.html
root/: asgi.py  settings.py  urls.py
static/: room.js
static/users/css/: style.css
templates/: all-users.html  base.html  index.html  room.html
templates/chats/: all-users.html  chat.html  room.html
templates/users/: base.html  login-register.html  login.html  register.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_image.py  0004_alter_user_date_joined_alter_user_image.py  0005_alter_user_image.py
