[tool.poetry]
name = "simple-chat-django"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
channels = "^4.0.0"
python-dotenv = "^1.0.0"
daphne = "^4.0.0"
pillow = "^10.1.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
